--- a/app/studycareer.component.html
+++ b/app/studycareer.component.html
@@ -9,7 +9,7 @@
   <hr>
   <button class="fa fa-plus-square-o"  (click)="addYear()" title="Voeg een nieuw jaar toe"></button>
   <button class="fa fa-trash-o" (click)="deleteYear()"  [class.disabled]="program&&program.length<=1" title="Verwijder het laatste jaar"></button>
-  <button class="fa fa-check"  [class.valid]="isValid()" [title]="isValid()?'Alle volgtijdelijkheden kloppen':'Sommige volgtijdelijkheden zijn fout'"></button>
+  <button class="fa fa-check" [class.fa-exclamation-triangle]="!isValid()"  [class.valid]="isValid()" [title]="isValid()?'Alle volgtijdelijkheden kloppen':'Sommige volgtijdelijkheden zijn fout'"></button>
 
   <div class="credits">
     <button (click)="openFeedbackDialogEvent.emit('')">Feeback</button>
